--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.3.2",
     "node-json-db": "^1.5.0",
     "uuidv4": "^6.2.13",
     "zeromq": "^6.0.0-beta.6"
