--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async-mutex": "^0.3.2",
     "node-json-db": "^1.5.0",
+    "uuid-timestamp": "^1.1.0",
     "uuidv4": "^6.2.13",
     "zeromq": "^6.0.0-beta.6"
   }
