--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "workstack",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "workstack.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "async-mutex": "^0.3.2",
     "node-json-db": "^1.5.0",
