--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "async-mutex": "^0.3.2",
+    "await-event-emitter": "^2.0.2",
     "node-json-db": "^1.5.0",
+    "p-event": "^5.0.1",
     "uuid-timestamp": "^1.1.0",
     "uuidv4": "^6.2.13",
     "zeromq": "^6.0.0-beta.6"
