--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "workstack",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/primarykey-click/workstack.git"
+  },
   "main": "workstack.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Primary Key git",
   "license": "MIT",
   "dependencies": {
     "async-mutex": "^0.3.2",
