--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "await-event-emitter": "^2.0.2",
     "node-json-db": "^1.5.0",
     "p-event": "^5.0.1",
+    "pouchdb-find": "^7.3.0",
+    "pouchdb-node": "^7.3.0",
     "uuid-timestamp": "^1.1.0",
     "uuidv4": "^6.2.13",
     "zeromq": "^6.0.0-beta.6"
