--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async-mutex": "^0.3.2",
     "await-event-emitter": "^2.0.2",
+    "express": "^4.18.1",
     "node-json-db": "^1.5.0",
     "p-event": "^5.0.1",
     "pouchdb-find": "^7.3.0",
